test/compile_fail/retired_runwith_fails.zig
const shift = @import("shift");

comptime {
    _ = shift.mergeRows;
}
